--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,38 +4,43 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/go
 
 trigger:
-- master
+  - master
+
+strategy:
+  matrix:
+    linux:
+      imageName: 'ubuntu-latest'
+    mac:
+      imageName: 'macOS-latest'
+    windows:
+      imageName: 'windows-latest'
 
 pool:
-  vmImage: 'Ubuntu-16.04'
+  vmImage: $(imageName)
 
 steps:
-- task: GoTool@0
-  inputs:
-    version: '1.12'
-  displayName: Installing go
+  - task: GoTool@0
+    inputs:
+      version: '1.13.4'
+    displayName: Installing go
 
-- script: |
-    go version
-    go get -v -t -d ./...
-    if [ -f Gopkg.toml ]; then
-        curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-        dep ensure
-    fi
-    go build -v .
-  displayName: 'Get dependencies, then build'
+  - script: |
+      go build -v .
+    displayName: 'Get dependencies, then build'
 
-- script: go test -v ./...
-  displayName: 'Run unit tests'
+  - script: go test -v ./...
+    displayName: 'Run unit tests'
 
-- script: go build -o examples/oauth2local
-  displayName: 'Building for integration tests'
+  - script: go build -o examples/oauth2local
+    condition: eq(variables['Agent.OS'], 'Linux')
+    displayName: 'Building for integration tests'
 
-- task: DockerCompose@0
-  displayName: 'Run integration tests'
-  inputs:
-    containerregistrytype: 'Container Registry'
-    dockerComposeFile: 'examples/docker-compose.yml'
-    action: 'Run a Docker Compose command'
-    dockerComposeCommand: 'up --build --exit-code-from integration'
-    cwd: '$(System.DefaultWorkingDirectory)/examples'
+  - task: DockerCompose@0
+    condition: eq(variables['Agent.OS'], 'Linux')
+    displayName: 'Run integration tests'
+    inputs:
+      containerregistrytype: 'Container Registry'
+      dockerComposeFile: 'examples/docker-compose.yml'
+      action: 'Run a Docker Compose command'
+      dockerComposeCommand: 'up --build --exit-code-from integration'
+      cwd: '$(System.DefaultWorkingDirectory)/examples'
